# strands-multi-agent-system

./: .dockerignore  .env.example  .env.production.example  .gitignore  Creating an AWS DevOps AI Agent with the Strands Agents SDK.md  Dockerfile  README.md  debug_strands.py  enable_bedrock_access.py  lab.ipynb  main.py  pyproject.toml  requirements.txt  run_tests.sh  start_backend.sh  test_foundation.py
agents/: __init__.py  alarm_manager.py  appointment_tools.py  aws_manager.py  aws_researcher.py  campaign_tools.py  coder.py  contact_tools.py  goal_tools.py  invoice_tools.py  invoices_agent.py  orchestrator.py  project_tools.py  proposal_tools.py  review_tools.py  run_aws_manager.sh  supervisor.py  task_tools.py  tool_utils.py
backend/: IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  __init__.py  admin_auth.py  auth_middleware.py  chat_service.py  config.py  context_manager.py  conversation_service.py  error_handler.py  main.py  models.py  optimization_config.py  test_server.py
completed_agents/: aws_researcher_full.py
docs/: SUPABASE_OPTIMIZATIONS.md
examples/: optimization_usage.py
migrations/: README.md  add_user_id_and_rls.sql
old_agents/: alarm_manager_full.py  aws_manager_agent_full.py  coder_full.py  orchestrator_full.py
project/: flights-schema.csv  flights.csv  userscript.sh
tests/: README.md  __init__.py  conftest.py  run_all_tests.py  test_cleanup.py  test_config_secrets_property.py  test_context_manager.py  test_e2e.py  test_invoices_agent.py  test_invoices_agent_batch.py  test_optimizations.py  test_rls_properties.py  test_server.py  (+3 more)
(+56 files in other folders)
