[project]
name = "strands-multi-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.61",
    "ddgs>=9.6.1",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "mcp>=1.19.0",
    "python-dotenv>=1.2.1",
    "strands-agents>=1.13.0",
    "strands-agents-tools>=0.2.12",
    "uv>=0.9.5",
    "supabase>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
